--- a/web/invoice_template/package.json
+++ b/web/invoice_template/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-image-annotate": "^1.6.2",
+    "react-image-gallery": "^1.0.8",
     "react-loader-spinner": "^3.1.14",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
